fix zip code modal hidden by navbar on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,10 @@
   padding-right: 40px !important;
 }
 
+.swal2-container {
+  z-index: 999999 !important;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -54,7 +58,7 @@
     p {
       font-size: 14px;
       @include media-breakpoint-down(lg) {
-        font-size: 12px;
+        font-size: 17px;
       }
     }
     @include media-breakpoint-up(sm) {
